<resources>
    <string name="app_name">Memento</string>


    <string name="menu_douban_movie">豆瓣电影</string>
    <string name="menu_zhihu">知乎日报</string>
    <string name="menu_dingxiang">丁香医生</string>
    <string name="menu_wxjingxuan">微信精选</string>
    <string name="menu_meitu">每日十图</string>
    <string name="menu_douban_book">豆瓣图书</string>
    <string name="menu_title">交流</string>
    <string name="menu_share">分享</string>
    <string name="menu_send">发送</string>

    <string name="pref_function">文章浏览</string>
    <string name="pref_dxys_title">丁香医生</string>
    <string name="pref_dxys_summary">丁香医生显示</string>
    <string name="pref_douban_movie_title">豆瓣电影</string>
    <string name="pref_douban_movie_summary">豆瓣电影显示</string>
    <string name="pref_douban_book_title">豆瓣图书</string>
    <string name="pref_douban_book_summary">豆瓣图书显示</string>
    <string name="pref_zhihu_title">知乎日报</string>
    <string name="pref_zhihu_summary">知乎日报显示</string>
    <string name="pref_weixin_title">微信精选</string>
    <string name="pref_weixin_summary">微信精选显示</string>
    <string name="pref_meitu_title">每日十图</string>
    <string name="pref_meitu_summary">每日十图显示</string>

    <string name="pref_app">应用设置</string>
    <string name="pref_app_theme_title">主题设置</string>
    <string name="pref_app_theme_summary">MaterialTheme主题颜色选择</string>
    <string name="pref_app_push_title">推送设置</string>
    <string name="pref_app_push_summary">消息推送设置</string>

    <string name="retionale_tip">需要定位权限确定您的位置，以便为您提供更好的个性化服务。需要开启存储权限，缓存请求，减少流量消耗。</string>
    <string name="rationale_ask_again">缺少权限将不能正常使用，是否开启权限？</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string name="share_list_image">share_image</string>
    <string name="share_list_title">share_title</string>
    <string name="share_theme_image">share_theme_image</string>


    <string name="material_theme_red">Red</string>
    <string name="material_theme_orange">Orange</string>
    <string name="material_theme_lime">Lime</string>
    <string name="material_theme_green">Green</string>
    <string name="material_theme_teal">Teal</string>
    <string name="material_theme_blue">Blue</string>
    <string name="material_theme_purple">Purple</string>


    <string name="nav_home">首页</string>
    <string name="nav_collection">收藏</string>
    <string name="nav_friends">朋友</string>
    <string name="nav_person">我</string>

    <string name="splash_title">Hope is a good thing, maybe the best of things, and no good thing ever dies.</string>

    <string name="title_activity_draw">DrawActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_zhihu">首页</string>
    <string name="today_list_title">今日新闻</string>
    <string name="zhihu_css"><![CDATA[ <link href="%s" rel="stylesheet">]]></string>


    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="email">邮箱</string>
    <string name="nick">昵称</string>
    <string name="passwd">密码</string>
    <string name="login_tip">没有账号? 新建一个</string>
    <string name="signup_tip">已有账号？ 登录</string>

    <string name="title_activity_splash_url">SplashUrlActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_activity_test">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="listArray">
        <item>Headings</item>
        <item>Headings and Details</item>
        <item>All Data</item>
    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
