<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="push_switch"
        android:summary="接受文章和通知消息推送"
        android:title="推送设置"/>


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages"/>

    <com.memento.android.ui.preference.ColorPickerPreference
        android:defaultValue="1"
        android:key="example_color"
        android:summary="接受文章和通知消息推送"
        android:title="推送设置"
        />

    <Preference android:title="主题设置">
        <intent
            android:targetClass="com.memento.android.ui.theme.ThemeSettingActivity"
            android:targetPackage="com.memento.android"/>
    </Preference>

</PreferenceScreen>
